# pycode

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  agent.py  agent_runner.py  bootstrap.py  cc_config.py  cheetahclaws.py  circuit_breaker.py  cloudsave.py  context.py  demo.py  docker-compose.yml  error_classifier.py  health.py  jobs.py  logging_utils.py  providers.py  pycode.py  pyproject.toml  quota.py  requirements.txt  runtime.py  session_store.py  tmux_tools.py  tool_registry.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
bridges/: interactive_session.py  qq.py  slack.py  telegram.py  terminal_runner.py  wechat.py  wechat_smart_reply.py  wechat_smart_reply_store.py
cc_daemon/: __init__.py  auth.py  bridge_methods.py  bridge_supervisor.py  cli.py  discovery.py  events.py  originator.py  runner_supervisor.py  schema.py  server.py  spike_client.py  system_methods.py
cc_kernel/: __init__.py  agentfs.py  api.py  capability.py  chaos.py  cli.py  contract.py  errors.py  integration.py  ledger.py  mailbox.py  methods.py  observability.py  registry.py  sandbox.py  scheduler.py  schema.py  store.py
cc_kernel/orchestrator/: __init__.py  dialogue.py
cc_kernel/runner/: __init__.py  runner_main.py  supervisor.py
cc_kernel/tools/: __init__.py  builtin.py  exec_tool.py  git_tool.py
cc_mcp/: __init__.py  client.py  config.py  oauth.py  types.py
checkpoint/: hooks.py  store.py  types.py
cheetahclaws/: __init__.py  __main__.py  agent.py  agent_runner.py  auxiliary.py  bootstrap.py  circuit_breaker.py  cli.py  cloudsave.py  compaction.py  config.py  context.py  error_classifier.py  health.py  jobs.py  logging_utils.py  providers.py  quota.py  runtime.py  session_store.py  skills.py  subagent.py  tmux_tools.py  tool_registry.py
cheetahclaws/agent_templates/: auto_bug_fixer.md  auto_coder.md  paper_writer.md  research_assistant.md
cheetahclaws/bridges/: __init__.py  draft_cache.py  interactive_session.py  qq.py  slack.py  telegram.py  terminal_runner.py  wechat.py  wechat_smart_reply.py
cheetahclaws/checkpoint/: __init__.py  hooks.py  store.py  types.py
cheetahclaws/commands/: __init__.py  advanced.py  agent_cmd.py  checkpoint_plan.py  config_cmd.py  core.py  daemon_cmd.py  lab_cmd.py  monitor_cmd.py  research_cmd.py  session.py  theme_cmd.py  workspace_cmd.py
cheetahclaws/daemon/: __init__.py  agent_methods.py  auth.py  bridge_methods.py  bridge_supervisor.py  cli.py  discovery.py  events.py  methods.py  monitor_methods.py  originator.py  permission.py  proactive_methods.py  proactive_scheduler.py  proactive_state.py  rpc.py  runner_ipc.py  runner_supervisor.py  schema.py  server.py  session_methods.py  spike_client.py  system_methods.py
cheetahclaws/kernel/: __init__.py  agentfs.py  api.py  bridge_mirror.py  capability.py  cli.py  contract.py  errors.py  event_log.py  integration.py  ledger.py  mailbox.py  methods.py  observability.py  process.py  registry.py  sandbox.py  scheduler.py  store.py  worker.py
cheetahclaws/mcp_client/: __init__.py  client.py  config.py  oauth.py  tools.py  types.py
cheetahclaws/memory/: __init__.py  consolidator.py  context.py  scan.py  store.py  tools.py  types.py
cheetahclaws/modular/: __init__.py  base.py
cheetahclaws/monitor/: __init__.py  fetchers.py  notifier.py  scheduler.py  store.py  summarizer.py
cheetahclaws/multi_agent/: __init__.py  fanout.py  subagent.py  tools.py
cheetahclaws/plugin/: __init__.py  loader.py  recommend.py  store.py  types.py
cheetahclaws/prompts/: README.md  select.py  (+1 more)
commands/: __init__.py  advanced.py  agent_cmd.py  checkpoint_plan.py  config_cmd.py  core.py  daemon_cmd.py  lab_cmd.py  monitor_cmd.py  session.py  theme_cmd.py
demos/: make_brainstorm_demo.py  make_checkpoint_demo.py  make_cloudsave_demo.py  make_demo.py  make_image_demo.py  make_memory_demo.py  make_multimodel_demo.py  make_plan_demo.py  make_proactive_demo.py  make_shell_escape_demo.py  make_slack_demo.py  make_ssj_demo.py  make_subagent_demo.py  make_telegram_demo.py  make_tmux_demo.py  make_video_demo.py  make_voice_demo.py  make_web_demo.py  make_wechat_demo.py  make_worker_demo.py
docs/: README.md  agent-os.md  architecture.md  contributor_guide.md  news.md
examples/: kernel_e2e_smoke.py
memory/: __init__.py  store.py  tools.py
modular/: __init__.py  base.py
monitor/: __init__.py  fetchers.py  notifier.py  store.py
multi_agent/: __init__.py  subagent.py  tools.py
plugin/: __init__.py  loader.py  recommend.py  store.py  types.py
prompts/: README.md  select.py
research/: __init__.py  aggregator.py  cache.py  http.py  reports.py  synthesizer.py
scripts/: docker-publish.sh  install.sh
skill/: builtin.py  loader.py
task/: __init__.py  store.py
tests/: conftest.py  e2e_checkpoint.py  e2e_commands.py  e2e_compact.py  e2e_daemon_skeleton.py  e2e_f4_runner.py  e2e_litellm_provider.py  e2e_plan_mode.py  e2e_plan_tools.py  e2e_prompt_regression.py  e2e_slash_prompt.py  manual_slash_dup_check.py  test_agent_nudge.py  test_agent_output_path.py  test_agent_runner_dup_stop.py  test_agent_tool_profiles.py  test_bounded_tool_io.py  test_brainstorm_grounding.py  test_brainstorm_lead.py  test_brainstorm_models_flag.py  test_brainstorm_quality_guards.py  test_brainstorm_v2_advanced.py  test_bridge_slash_handler.py  test_budget.py  test_cache_tokens.py  test_cc_daemon_agent_methods.py  test_cc_daemon_bridge_methods.py  test_cc_daemon_bridge_phase2.py  test_cc_daemon_bridge_supervisor.py  test_cc_daemon_cli.py  test_cc_daemon_discovery.py  test_cc_daemon_events_sqlite.py  test_cc_daemon_f9_budgets.py  test_cc_daemon_monitor_methods.py  test_cc_daemon_proactive.py  test_cc_daemon_quota_pause.py  test_cc_daemon_runner_notify_routing.py  test_cc_daemon_runner_permission_routing.py  test_cc_daemon_runner_restart_policy.py  test_cc_daemon_runner_supervisor.py  (+118 more)
tools/: __init__.py  files.py  research.py  security.py  web.py
ui/: __init__.py  input.py  render.py
web/: __init__.py  api.py  auth.py  chat.html  db.py  lab.html  lab_api.py  logging_setup.py  models.py  server.py
(+313 files in other folders)
